--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="gallery">
-            <div class="card row-2" style="background-image: url('./images/01.jpg');">YamateXKudasae</div>
+            <div class="card row-2" style="background-image: url('./images/01.jpg');">MiyaXTaki</div>
             <div class="card col-2" style="background-image: url('./images/02.png');">TanjiroXRengoku</div>
             <div class="card" style="background-image: url('./images/03.jpg');">ErenXMikasa</div>
             <div class="card row-2" style="background-image: url('./images/04.jpg');">LuffyXZoro</div>
